<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/header_tamyiz_baru" />

    <TextView
        android:text="@string/transaksi_buku"
        android:textStyle="italic"
        android:textColor="@color/green_header"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="12dp"
            android:elevation="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="77dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/book_green" />
            <TextView
                android:text="@string/transaksi_penjualan_buku"
                android:textSize="15sp"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="12dp"
            android:elevation="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="77dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/book_blue" />
            <TextView
                android:text="@string/data_buku_tambah_buku"
                android:textSize="15sp"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="12dp"
            android:elevation="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="77dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/book_pink" />
            <TextView
                android:text="@string/data_piutang_buku"
                android:textSize="15sp"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="12dp"
            android:elevation="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="77dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/book_orange" />
            <TextView
                android:text="@string/laporan_penjualan_buku"
                android:textSize="15sp"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <TextView
        android:text="@string/transaksi_pesantren_bulanan"
        android:textStyle="italic"
        android:textColor="@color/green_header"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="12dp"
            android:elevation="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="77dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/evaluation_green" />
            <TextView
                android:text="@string/pendaftaran_santri_baru"
                android:textSize="15sp"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="12dp"
            android:elevation="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="77dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/evaluation_orange" />
            <TextView
                android:text="@string/kas_d_k"
                android:textSize="15sp"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="12dp"
            android:elevation="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="77dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/evaluation_pink" />
            <TextView
                android:text="@string/data_piutang_bulanan"
                android:textSize="15sp"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="12dp"
            android:elevation="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="77dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/book_orange" />
            <TextView
                android:text="@string/laporan_keuangan"
                android:textSize="15sp"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>